--- a/rebuttal/ijcai21-authors-response.tex
+++ b/rebuttal/ijcai21-authors-response.tex
@@ -29,26 +29,21 @@
 
 \begin{document}
 \paragraph{Rebuttal to Reviewer $\#$2: factual error}
-One of the weaknesses of the paper is indeed the fact that the method proposed here is not compared with others, neither in terms of computational efficiency, nor in terms of quality of the result. Only variants of the same methods are compared with each others
-
-We believe it is erroneous to consider the lack of comparison a weakness. The simultaneous elicitation of both the voting rule and the agents preferences is a novel setting. To the best of our knowledge, there is no clear competitor from the state-of-the-art to compare with. However, please note that we designed all the strategies to challenge one another; in particular:
-The Elitist Strategy has a very different approach than the Pessimistic Strategy to the point that it cannot be considered a variant. We compared these two strategies in a situation specifically tailored to advantage the Elitist Strategy.
-The Experiment involving the Two Phases Strategy was designed to challenge our interleaving approach by comparing it with a more classical linear method: first elicit the rule and then the agent’s preferences or vice versa. The former coincides with the case of preferences elicitation, given the voting rule, investigated by Lu and Boutilier [2011].
+\begin{itemize}
+	\item \textit{One of the weaknesses is that the method proposed is not compared with others.}
+\end{itemize}
+We believe it is erroneous to consider the lack of comparison a weakness. The simultaneous elicitation of both the voting rule and the agents preferences is a novel setting. To the best of our knowledge, there is no clear competitor from the state-of-the-art to compare with. However, please note that we designed all the strategies to challenge one another. The Elitist Strategy has a very different approach than the Pessimistic Strategy to the point that it cannot be considered a variant. We compared these two strategies in a situation specifically tailored to advantage the Elitist Strategy. The experiment involving the Two Phases Strategy was designed to challenge our interleaving approach by comparing it with a more classical linear method: first elicit the rule and then the agent’s preferences or vice versa. The former coincides with the case of preferences elicitation, given the voting rule, investigated by Lu and Boutilier [2011].
 We are not aware of any work that elicits the voting rule we could compare with —the work by Cailloux and Endriss [2014] does not consider scoring rules.
-
-R2: “If an election is to be achieved, the voting rule has to be defined independently of the preferences of the voters. And probably not by the chairperson who may influence the result by choosing the weights.”
-It is not true that any decision process involving preference aggregation requires a voting rule defined beforehand, nor that it is necessarily a bad idea to let a chair decide on the voting rule or influence the voting rule definition. The interest of considering incomplete knowledge in the voting rule has been advocated in a recent survey paper of a leading researchers in computational social choice [Lang 2020; section 2.5]. Jerôme’s paper also says that. HAH. The case of IJCAI aggregation process of reviews illustrates the point. The Introduction section of our article provides another example.
-
-[Lang 2020] Jérôme Lang: Collective Decision Making under Incomplete Knowledge: Possible and Necessary Solutions. IJCAI 2020: 4885-4891
+\begin{itemize}
+	\item \textit{The voting rule has to be defined independently of the voters preferences and not by the chairperson.}
+\end{itemize}
+It is not true that any decision process involving preference aggregation requires a voting rule defined beforehand, nor that it is necessarily a bad idea to let a chair decide on the voting rule. The interest of considering incomplete knowledge in the voting rule has been advocated in a recent survey paper of a leading researchers in Computational Social Choice [Lang 2020 \url{https://doi.org/10.24963/ijcai.2020/680}; section 2.5]. The case of IJCAI aggregation process of reviews illustrates the point. The Introduction section of our article provides another example.
 
 \paragraph{Rebuttal to Reviewer $\#$32: specific questions}
-[If we have space we add that although the reviewer didn’t use the proper section, the questions were in the form provided in the FAQ “When to answer?”]
-
--Why would voters participate in a voting rule that is not public or common knowledge?
--I struggle to understand why a "third party elicits both votes and chair" setting might arise in practice. Can the authors give an example?
--Why is this easier than reflecting on the relative weights?
--If the chair can compute winners over and over for every elicitation for arbitrary size profiles, why wouldn't the chair just compute the real winner himself or herself, rather the delegate to the third party?
-
+[Although not in the proper section, the reviewer formulated the following questions in the format described by the FAQ “When to answer?”.]
+\begin{itemize}
+	\item \textit{I struggle to understand when the setting may occur in practice. Can the authors give an example? Why would voters participate in a voting rule that is not public or common knowledge? Why wouldn't the chair just compute the winner herself?}
+\end{itemize}
 Other than the example we provided in the Introduction —that describes the hiring process of a new employee— we could consider the reviewing process of a conference where the best paper must be elected. This new example also responds to the concern regarding the lack of knowledge of the voting rule among the agents. In this context, the agents express their preferences on the papers they reviewed, but they are not aware of the voting rule the SPC member will apply when aggregating all the preferences. Nonetheless, reviewers are still willing to participate in the process. On the other hand, the SPC member may not have a specific voting rule in mind, and she will find it hard to provide a precise scoring vector if asked. This part addresses the argument on the relative weights. Imagine, for the sake of the example, that all the reviewers review all the papers and they rank them according to their preferences. How does the SPC select the best paper? Surely she could adopt the Borda count and pick the paper with the highest score, but this is not the most appealing method. Maybe the SPC strongly believes that being ranked once in the first position is “much more” valuable than being ranked two times second, but does not know exactly how much more (though she can judge example cases). This is similar to how the paper WeBuildAI (and the general literature in micro-economy) supposes that participants are able to compare pairs of matches, but does not assume that participants can explicit their utility functions. Specifying general algorithms is demanding, hence, we adapt a mechanism used in a real life experiment by Giritligil et al. [2005] in a novel way for the setting of elicitation of positioning scoring rules (PSRs). 
 
 There is also an important methodological argument for being able to phrase questions in terms of winners out of profiles. This is arguably the most fundamental and natural view of what a social choice function is: it chooses winners out of profiles. The rest, such as talking in terms of weights, is a synthetic, constructed, view about how a social choice function works. Different such constructions could lead to different appreciations and judgements by participants. For example, PSRs can also be described in terms of distance to ideal profiles ( On the role of distances in defining voting rules, E Elkind, P Faliszewski, AM Slinko, AAMAS 2010). There is no a priori reason to believe that questioning the chair in terms of this different parametric space would yield logically equivalent answers: research in experimental psychology shows that participants’ answers differ widely when changing the phrasing of preference-related questions (Lichtenstein, Slovic - The Construction of Preference, Cambridge University Press, 2006). To get out of such conundrums, we need a language considered “fundamental”. Questions of the form “In this profile, who should win?” arguably provides such a natural language.
