--- a/rebuttal/ijcai21-authors-response.tex
+++ b/rebuttal/ijcai21-authors-response.tex
@@ -29,8 +29,8 @@
 \usepackage{color}
 
 \newcommand{\commentOC}[1]{\textcolor{blue}{\small$\big[$OC: #1$\big]$}}
-\newcommand{\commentBN}[1]{\textcolor{red}{\small$\big[$BN: #1$\big]$}}
-\newcommand{\commentPV}[1]{\textcolor{brown}{\small$\big[$PV: #1$\big]$}}
+\newcommand{\commentBN}[1]{\textcolor{magenta}{\small$\big[$BN: #1$\big]$}}
+\newcommand{\commentPV}[1]{\textcolor{red}{\small$\big[$PV: #1$\big]$}}
 
 \begin{document}
 %Working around the censorship.
@@ -40,8 +40,8 @@
 \paragraph{Rebuttal to Reviewer $\#$2: factual error}.\\
 \textit{\textbf{One of the weaknesses is that the method proposed is not compared with others.}}
 
-\commentOC{I suggest to remove “factual error” and “specific questions” and rather directly go with the first question.}
-We believe it is erroneous to consider the lack of comparison a weakness. The simultaneous elicitation of both the voting rule and the agents preferences is a novel setting and, as far as we know, there is no clear competitor from the state-of-the-art to compare with. However, please note that we designed all the strategies to challenge one another. $1)$ The Elitist has a very different approach than the Pessimistic to the point that it cannot be considered a variant. We compared these two strategies in a situation specifically tailored to advantage the Elitist. $2)$ The Two Phases was designed to challenge our interleaving approach by comparing it with a more classical linear method: first elicit the rule and then the agents preferences or vice versa. The former coincides with the method of Lu and Boutilier [2011] for preferences elicitation fixed the voting rule.
+\commentOC{I suggest to remove “factual error” and “specific questions” and rather directly go with the first question.} \commentBN{I'm not against removing it but I thought it was better to specify why we are replying. In the FAQ for the AC there is a question 1) "What should I do if the authors have sent a response?" the answer is "You have to check whether the response really points out a factual error in a review or unethical issues.etc etc" 2)"Can reviewers ask specific questions to the authors, that they should answer during the response phase?" the answer is "In principle, No. etc etc". I'm afraid the AC won't send the respond to the reviewer if he feels we're just using it to contest his opinion.}
+We believe it is erroneous to consider the lack of comparison a weakness. The simultaneous elicitation of both the voting rule and the agents preferences is a novel setting and, as far as we know, there is no clear competitor from the state-of-the-art to compare with. However, please note that we designed all the strategies to challenge one another. $1)$ The Elitist has a very different approach than the Pessimistic to the point that it cannot be considered a variant. We compared these two strategies in a situation specifically tailored to advantage the Elitist. $2)$ The Two Phases was designed to challenge our interleaving approach by comparing it with a more classical linear \commentPV{I don't like calling "linear" the classic method of first eliciting the rule and then the agents. But I am unsure about an alternative, maybe "sequential"?} method: first elicit the rule and then the agents preferences or vice versa. The former coincides with the method of Lu and Boutilier [2011] for preferences elicitation fixed the voting rule.
 We are not aware of any method that elicits the voting rule we could compare with —the work by Cailloux and Endriss [2014] does not consider PSRs.
 
 \textit{\textbf{The voting rule has to be defined independently of the voters preferences and not by the chairperson.}}
@@ -53,8 +53,8 @@ It is not true that any decision process involving preference aggregation requir
 
 \textit{\textbf{Can the authors give an example of when the setting may occur in practice? Why would voters participate without knowing the voting rule? Why selecting winners is easier than reflecting on weights or computing the winner herself?}}
 
-Other than the example we provided in the Introduction, we could consider the reviewing process of a conference where the best paper must be elected. In this context, the agents express their preferences on the papers they reviewed, but they are not aware of the voting rule the SPC member will apply when aggregating them. %Nonetheless, reviewers are still willing to participate in the process. 
-Also, the SPC member may not have a specific voting rule in mind, and she will find it hard to provide a precise scoring vector if asked. Imagine, for the sake of the example, that all the reviewers review all the papers and they rank them according to their preferences. The SPC member could adopt the Borda count and pick the paper with the highest score, but this is not the most appealing method. Maybe she strongly believes that being ranked once in the first position is “much more” valuable than being ranked two times second, but does not know exactly how much more (though she can judge example cases). This is similar to how the paper WeBuildAI (and the general literature in micro-economy) supposes that participants are able to compare pairs of matches, but does not assume that participants can explicit their utility functions. Methodologically speaking, phrasing questions in terms of winners out of profiles is arguably the most fundamental and natural view of what a social choice function is. Talking in terms of weights is a synthetic construction that could lead to different judgments by participants than other constructions. \commentOC{I find it important that the two next commented-out sentences be somehow included.}
+Other than the example we provided in the Introduction, we could consider the reviewing process of a conference where the best paper must be elected. In this context, the agents express their preferences on the papers they reviewed, but they are not aware of the voting rule the Program Chair will apply when aggregating them. %Nonetheless, reviewers are still willing to participate in the process. 
+Also, the PC may not have a specific voting rule in mind, and she will find it hard to provide a precise scoring vector if asked. Imagine, for the sake of the example, that all the reviewers review all the papers and they rank them according to their preferences. The PC member could adopt the Borda count and pick the paper with the highest score, but this is not the most appealing method. Maybe she strongly believes that being ranked once in the first position is “much more” valuable than being ranked two times second, but does not know exactly how much more (though she can judge example cases). This is similar to how the paper WeBuildAI (and the general literature in micro-economy) supposes that participants are able to compare pairs of matches, but does not assume that participants can explicit their utility functions. Methodologically speaking, phrasing questions in terms of winners out of profiles is arguably the most fundamental and natural view of what a social choice function is. Talking in terms of weights is a synthetic construction that could lead to different judgments by participants than other constructions. \commentOC{I find it important that the two next commented-out sentences be somehow included.}
 %For example, PSRs can also be described in terms of distance to ideal profiles ( On the role of distances in defining voting rules, Elkind et al., AAMAS 2010). 
 %There is no a priori reason to believe that questioning the chair in terms of this different parametric space would yield logically equivalent answers: 
 A research in experimental psychology shows that participants’ answers differ widely when changing the phrasing of preference-related questions [Lichtenstein \& Slovic, 2012, \href{https://doi.org/10.1017/CBO9780511618031}{doi: 10.1017/CBO9780511618031}].
@@ -69,7 +69,7 @@ To get out of such conundrums, we need a language considered “fundamental”. 
 
 %-Is Figure 1 for the synthetic data? Please specify. Same question for Tables 2 and 3. In Figure 2, are the m=N,n=N lines the synthetic data?
 %-Why is Figure 2 shown for only Pessimistic, not all the approaches? Were all approaches tested on all data sets? Or were all approaches only tested on synthetic data?
-Yes, when we do not specify the name of the dataset we mean data generated following the procedure described in Sec 5. Regarding the real datasets, we only tested the Pessimistic strategy for the following reasons: $1)$ Random was considered only as a baseline in the first experiment, which shows that Pessimistic performs much better; $2)$ As pointed out in Sec 4, Extended Pessimistic is too computationally costly to run on larger instances; $3)$ Elitist was designed with the only purpose of challenging our best strategy (Pessimistic) in extreme cases tailored to favor the former. Testing this strategy in other settings does not yield interesting information; $4)$ Two Phase was designed to compare our interleaving approach to a more classical linear method. We thought that the most challenging situation (Impartial Culture) was the best setting to perform this test. \commentOC{What does the last sentence answer?}
+Yes, when we do not specify the name of the dataset we mean data generated following the procedure described in Sec 5. Regarding the real datasets, we only tested the Pessimistic strategy for the following reasons: $1)$ Random was considered only as a baseline in the first experiment, which shows that Pessimistic performs much better; $2)$ As pointed out in Sec 4, Extended Pessimistic is too computationally costly to run on larger instances; $3)$ Elitist was designed with the only purpose of challenging our best strategy (Pessimistic) in extreme cases tailored to favor the former. Testing this strategy in other settings does not yield interesting information; $4)$ Two Phases was designed to compare our interleaving approach to a more classical linear method. We thought that the most challenging situation (Impartial Culture) was the best setting to perform this test. \commentOC{What does the last sentence answer?}\commentBN{To why we didn't test Two Phases with real datasets.}
 
 
 
